--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <h1>Messages from the server:</h1>
+  <h1>Messages from server:</h1>
   <ul id="messages"></ul>
   </ul>
 </body>
